[package]
name = "glushkovizer"
version = "0.22.0"
edition = "2021"
description = "Manipulation, regular expression and automaton library. Allows conversion of regular expressions into automata and analysis of automata and their orbits"
keywords = ["glushkov", "automata", "regular-expression", "regexp"]
authors = ["Lurgrid <lurgrid@sagbot.com>"]
repository = "https://github.com/Lurgrid/Glushkovizer"
license = "GPL-3.0"

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
thiserror = "1"
serde = { version = "1" }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
serde_cbor = "0.11"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
