[package]
name = "glushkovizer-gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
glushkovizer = { path = "../glushkovizer" }
ashpd = { version = "0.8.1", features = ["gtk4"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }

[build-dependencies]
glib-build-tools = "0.19.0"
