[package]
name = "glushkovizer-gtk4"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
glushkovizer = { path = "../glushkovizer" }
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }

[build-dependencies]
glib-build-tools = "0.19"
