[package]
name = "glushkovizer-gtk4"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
glushkovizer = { path = "../glushkovizer" }
adw = { optional = true, version = "0.6", package = "libadwaita", features = [
    "v1_5",
] }
serde_json = "1"

[build-dependencies]
glib-build-tools = "0.19"

[features]
default = ["dep:adw"]
no-adwaita = []
no-blp = []
