[package]
name = "glushkovizer"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"
thiserror = "1.0.60"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
