[package]
name = "glushkovizer"
version = "0.19.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
serde_cbor = "0.11"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
